adding all Resources for one player